istio/app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    version: v2
  name: flask-v2
  namespace: istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        version: v2
        app: flask
    spec:  
      containers:
        - image: eu.gcr.io/hopeful-folder-272211/practica/flask-k8s
          name: flask
          ports:
            - containerPort: 5000
          resources: 
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
