istio/flask-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask
  type: ClusterIP
