istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: istio
  name: flask
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - eu.gcr.io/hopeful-folder-272211/practica/flask-k8s
    port:
      name: http
      number: 80
      protocol: HTTP
