istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flask
  namespace: istio
spec:
  host: flask
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
