istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask
  namespace: istio
spec:
  hosts:
  - eu.gcr.io/hopeful-folder-272211/practica/flask-k8s
  gateways:
  - flask-gateway
  http:
  - route:
    - destination:
        host: flask
        subset: v1
    - destination:
        host: flask
        subset: v2
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream
